@startuml

!include ../../style.puml
skinparam ClassAttributeIconSize 0
skinparam classBackgroundColor UI_COLOR

package Model {
    class ApplicationManager
}


package UI as UiPackage {
    class UiMain {
        - ui : UiMain
        - scan : Scanner

        + UiMain()
        + getInstance()
    }
    class UiTable {
        <u> + getTable() : String
    }
    class UiConstants {
        <u> + TABLE_HEADER_ARRAYLIST : ArrayList<String>
    }
}

ApplicationManager << (X,#FFFFFF) >>
ApplicationManager --> UiMain

UiMain ..> UiTable
UiMain ..> UiConstants

@enduml
